adding link to datasheet and changing loading file name accordingly

--- a/Day 6/Bootcamp Day 6.ipynb
+++ b/Day 6/Bootcamp Day 6.ipynb
@@ -32,7 +32,7 @@
    "outputs": [],
    "source": [
     "#Reading the data from the excel sheet and naming the columns\n",
-    "mydata= pd.read_csv(r\"ratings_Electronics.csv\", names=[\"userid\", \"productid\",\"rating\",\"timestamp\"])\n",
+    "mydata= pd.read_csv(r\"ratings_Electronics (1).csv\", names=[\"userid\", \"productid\",\"rating\",\"timestamp\"])\n",
     "# Qn what is the work of r here"
    ]
   },
